--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -270,7 +270,8 @@
 		left: 280px;
 		border-radius: 50%;
 		border: 1px solid #FFF;
-		width: 11.6% !important;
+		width: 11.9% !important;
+		margin-top: 50;
 
 	}
 
