--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,12 @@
 			color: inherit;
 			text-decoration: none;
 		}
+
+		h3 {
+			font-size: 1.3em;
+			font-weight: bold;
+			margin-bottom: 0.5em;
+		}
 		
 	strong, b
 	{
@@ -166,11 +172,15 @@
 		{
 			display: inline-block;
 		}
+
+		.image img:hover{
+			opacity: 80%;
+		}
 		
 			.image img
 			{
 				display: inline-block;
-				width: 80%;
+				width: 90%;
 			}
 
 			.image.featured
@@ -1095,6 +1105,11 @@ table.personale th:nth-child(even){
 background-color:#922503;
 }
 </style>
+
+
+
+
+
 
 
 
